--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "currency-converter-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://holaa-olaa.github.io/currency-converter-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
